--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Início</title>
+        <title>SEJA BEM VINDO!</title>
         <link rel="stylesheet" href="estilogeral.css">
     </head>
     <body>
@@ -42,13 +42,13 @@
                             <li><a href="waze.html">WAZE</a></li>
                         </ul>
                     </li>
-                    <li><a href="contato.html">CONTATO</a></li>
+                    <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                     <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
                 </ul>
             </nav>
         </header>
-        <h4>Bem vindo à CASA FRENTE MAR do Igor!</h4>
-        <h5>A melhor casa de veraneiro do litoral sul de São Paulo!</h5>
+        <h3>Bem vindo à CASA FRENTE MAR do Igor!</h3>
+        <h4>A melhor casa de veraneiro do litoral sul de São Paulo!</h4>
         <section class="slideshow">
             <img class="active" src="flagcasapraia.png" alt="vista fachada">
             <img src="santa.jpg" alt="vista aérea Samta">
@@ -79,7 +79,7 @@
             setInterval(nextSlide, 3000);
         </script>
         <section class="text-section">
-            <h5>Temporada e Finais de Semana</h5>
+            <h1>Temporada e Finais de Semana</h1>
             <p>Maravilhosa casa à beira-mar, na altura do Balneário Itaóca, pertinho do Corpo de Bombeiros.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/5pBbh7dHJSI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Venha descansar e se divertir, usufruindo de toda a estrutura caprichosamente prepada para você, sua família e amigos.</p>
