--- a/mongagua.html
+++ b/mongagua.html
@@ -6,57 +6,74 @@
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>MONGAGU[A, A CIDADE MAIS CHARMOSA DO LITORAL SUL DE SÃO PAULO</title>
+        <title>MONGAGUÁ, A CIDADE MAIS CHARMOSA DO LITORAL SUL DE SÃO PAULO</title>
         <link rel="stylesheet" href="estilogeral.css">
     </head>
-<body>
+    <body>
 
-    <header>
-        <nav>
-            <button class="hamburger" onclick="toggleMenu()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </button>
-            <ul class="menu">
-                <li><a href="index.html">INÍCIO</a></li>
-                <li><a href="mongagua.html">MONGAGUÁ</a></li>
-                <li>
-                    <a href="#">GALERIA</a>
-                    <ul class="submenu">
-                        <li><a href="fotos.html">FOTOS</a></li>
-                        <li><a href="videos.html">VÍDEOS</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">ALUGUE</a>
-                    <ul class="submenu">
-                        <li><a href="agenda.html">AGENDA</a></li>
-                        <li><a href="calculadora.html">PREÇOS</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">COMO CHEGAR</a>
-                    <ul class="submenu">
-                        <li><a href="googlemaps.html">MAPS</a></li>
-                        <li><a href="waze.html">WAZE</a></li>
-                    </ul>
-                </li>
-                <li><a href="contato.html">CONTATO</a></li>
-                <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <nav>
+                <button class="hamburger" onclick="toggleMenu()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </button>
+                <ul class="menu">
+                    <li><a href="index.html">INÍCIO</a></li>
+                    <li><a href="mongagua.html">MONGAGUÁ</a></li>
+                    <li>
+                        <a href="#">GALERIA</a>
+                        <ul class="submenu">
+                            <li><a href="fotos.html">FOTOS</a></li>
+                            <li><a href="videos.html">VÍDEOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">ALUGUE</a>
+                        <ul class="submenu">
+                            <li><a href="agenda.html">AGENDA</a></li>
+                            <li><a href="calculadora.html">PREÇOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">COMO CHEGAR</a>
+                        <ul class="submenu">
+                            <li><a href="googlemaps.html">MAPS</a></li>
+                            <li><a href="waze.html">WAZE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
+                    <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
+                </ul>
+            </nav>
+        </header>
 
-    <section class="text-section">
-        <h1>CONHEÇA MONGAGUÁ</h1>
-        <p>INFORMACOES SOBRE A CIDADE.</p>
-    </section>
+        <section class="text-section">
+            <h1>CONHEÇA MONGAGUÁ</h1>
+            <p>Uma das mais belas cidades do litoral sul de São Paulo, Mongaguá é conhecida por suas praias tranquilas, cultura vibrante e fácil acesso aos principais pontos turísticos da Baixada Santista.</p>
+            <img id="imgmgg" src="santa.jpg" alt="Nossa Senhora Aparecida"/>
+            <p>Localizada estratégicamente entre Santos, São Vicente, Praia Grande, Itanhaém e Peruíbe, e também a apenas algumas horas da capital paulista, a cidade é uma opção ideal para quem busca lazer, contato com a natureza e imersão cultural.</p>
+            <<img id="imgmgg" src="mapamgg.png" alt="Mapa e acessos"/>
+            <p>As praias de Mongaguá são amplas e possuem águas calmas, perfeitas para famílias e adeptos de esportes aquáticos.</p>
+            <img id="imgmgg" src="orlageralmgg.jpeg" alt="Vista Orla"/>
+            <p>Entre elas, destaca-se a Praia Central, que é o coração do lazer local, com um calçadão extenso e infraestrutura completa para os visitantes, oferecendo quiosques, áreas de descanso e ciclovias.</p>
+            <img id="imgmgg" src="praiacentromgg.png" alt="Praia Central Mongaguá"/>
+            <p>A Praia Agenor de Campos também atrai muitos turistas, principalmente pela beleza e com o atrativo da plataforma de pesca.</p>
+            <img id="imgmgg" src="praiaagenormgg.png" alt="Praia Agenor de Campos">
+            <p>O Parque Ecológico A TRIBUNA, é uma ótima opção para quem gosta de contato com a natureza, apreciar a fauna e a flora, conhecendo a história da região. É destino obrigatório para a criançada.</p>
+            <img id="imgmgg" src="atribuna.png" alt="Parque Ecológco A TRBUNA">
+            <p> O Poço das Antas, destino muito procurado por turistas, tem em sua paisagem maravilhosa queda d'água que a transforma em um ambiente revigorante.</p>
+            <img id="imgmgg" src="pocoantas.jpeg" alt="Poço das Antas">
+            <p>A cultura em Mongaguá é diversa e rica, com eventos sazonais e celebrações tradicionais.</p>
+            <p>A Feira de Artesanato do Centro é uma parada obrigatória, onde é possível encontrar produtos feitos à mão, como artesanatos locais, acessórios e delícias culinárias típicas da região. A cidade também realiza festivais de música e dança, além de ter uma agenda de eventos religiosos e festivos que atraem pessoas de várias regiões, mantendo vivas as tradições locais e o espírito comunitário.</p>
+            <img id="imgmgg" src="feiramgg.jpg" alt="Feira Centro Mongaguá"/>
+            <p>Mongaguá é, portanto, uma ótima escolha para quem busca um ambiente de praias tranquilas, cultura autêntica e acesso facilitado aos tesouros turísticos da Baixada Santista.</p>
+        </section>
 
-    <footer>
-        <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
+        </footer>
 
-    <script src="scriptmenu.js"></script>
-</body>
+        <script src="scriptmenu.js"></script>
+    </body>
 </html>
