--- a/fotos.html
+++ b/fotos.html
@@ -42,16 +42,15 @@
                             <li><a href="waze.html">WAZE</a></li>
                         </ul>
                     </li>
-                    <li><a href="contato.html">CONTATO</a></li>
+                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                 <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
                 </ul>
             </nav>
         </header>
 
         <section class="text-section">
-            <h1>GALERIA DE FOTOS</h1>
-            <p>Pagina de fotos com informações em texto sobre a casa.</p>
-            <p>Galeria com fotos dos visitantes</p>
+        <h1>ESTA PÁGINA ESTARÁ DISPONÍVEL EM BREVE!</h1>
+            <p>Galeria com fotos da casa e de visitantes</p>
         </section>
 
         <footer>
