--- a/videos.html
+++ b/videos.html
@@ -42,14 +42,14 @@
                         <li><a href="waze.html">WAZE</a></li>
                     </ul>
                 </li>
-                <li><a href="contato.html">CONTATO</a></li>
+                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                 <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
             </ul>
         </nav>
     </header>
 
     <section class="text-section">
-        <h1>GALERIA DE VIDEOS</h1>
+        <h1>ESTA PÁGINA ESTARÁ DISPONÍVEL EM BREVE!</h1>
         <p>Pagina com videos e textos sobre a casas e feitos por visitantes.</p>
     </section>
 
