--- a/agenda.html
+++ b/agenda.html
@@ -42,16 +42,94 @@
                         <li><a href="waze.html">WAZE</a></li>
                     </ul>
                 </li>
-                <li><a href="contato.html">CONTATO</a></li>
+                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                 <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
             </ul>
         </nav>
     </header>
 
-    <section class="text-section">
-        <h1>AGENDA DE LOCAÇÕES</h1>
-        <p>Pagina que ira conter todas as datas ja alugadas</p>
-    </section>
+  <h1>DATAS AGENDADAS</h1>
+  
+
+            <section id="agenda">
+                <h2>Agenda - Outubro 2024</h2>
+                <table>
+                    <tr>
+                        <th>Data</th>
+                        <th>Status</th>
+                        <th>Informações</th>
+                    </tr>
+
+                    <tr>
+                        <td>25/10 a 27/10</td>
+                        <td class="reservado"><b>NA CASA AGORA<b/></td>
+                        <td>Leila</td>
+                    </tr>
+
+                    <!-- Continue adicionando as linhas conforme necessário -->
+                </table>
+
+              <h2>Agenda - Novembro 2024</h2>
+                <table>
+                    <tr>
+                        <th>Data</th>
+                        <th>Status</th>
+                        <th>Informações</th>
+                    </tr>
+                    <tr>
+                        <td>01/11 a 03/11</td>
+                        <td class="reservado">Alugado</td>
+                        <td>Sandra</td>
+                    </tr>
+                  <tr>
+                        <td>08/11 a 10/11</td>
+                        <td class="reservado">Alugado</td>
+                        <td>Camille</td>
+                    </tr>
+                           <tr>
+                        <td>15/11 a 17/11</td>
+                        <td class="reservado">Alugado</td>
+                        <td>Thais</td>
+                    </tr>
+
+                    <!-- Continue adicionando as linhas conforme necessário -->
+                </table>
+                <h2>Agenda - Dezembro 2024</h2>
+                <table>
+                    <tr>
+                        <th>Data</th>
+                        <th>Status</th>
+                        <th>Informações</th>
+                    </tr>
+                    <tr>
+                        <td>22/12 a 26/12</td>
+                        <td class="reservado">Alugado</td>
+                        <td>Rosangela</td>
+                    </tr>
+                    <tr>
+                        <td>27/12 a 02/01</td>
+                        <td class="reservado">Alugado</td>
+                        <td>Poliana</td>
+                    </tr>
+
+                    <!-- Continue adicionando as linhas conforme necessário -->
+                </table>
+               <h2>Agenda - Janeiro 2025</h2>
+                <table>
+                    <tr>
+                        <th>Data</th>
+                        <th>Status</th>
+                        <th>Informações</th>
+                    </tr>
+                    <tr>
+                        <td>17/01 a 19/01</td>
+                        <td class="reservado">RESERVADO</td>
+                        <td>Chiquinho</td>
+                    </tr>
+                    
+                    <!-- Continue adicionando as linhas conforme necessário -->
+                </table>      
+            </section>
 
     <footer>
         <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
