--- a/googlemaps.html
+++ b/googlemaps.html
@@ -42,7 +42,7 @@
                         <li><a href="waze.html">WAZE</a></li>
                     </ul>
                 </li>
-                <li><a href="contato.html">CONTATO</a></li>
+                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                 <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
             </ul>
         </nav>
@@ -50,7 +50,7 @@
 
     <section class="text-section">
         <h1>GOOGLE MAPS</h1>
-        <p>Pagina com incorporacao do google maps para facilitar acesso dos clientes a chegar ao local.</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3641.461958038957!2d-46.671127125398996!3d-24.120409682367196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce27e2fbd603f3%3A0x3c1fa1c4eda006d1!2sAv.%20Gov.%20M%C3%A1rio%20Covas%20J%C3%BAnior%2C%207380%20-%20Balne%C3%A1rio%20Ita%C3%B3ca%2C%20Mongagu%C3%A1%20-%20SP%2C%2011730-000!5e0!3m2!1spt-BR!2sbr!4v1729984720871!5m2!1spt-BR!2sbr" width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <footer>
