--- a/waze.html
+++ b/waze.html
@@ -42,7 +42,7 @@
                         <li><a href="waze.html">WAZE</a></li>
                     </ul>
                 </li>
-                <li><a href="contato.html">CONTATO</a></li>
+                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
                 <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
             </ul>
         </nav>
@@ -50,7 +50,7 @@
 
     <section class="text-section">
         <h1>WAZE</h1>
-        <p>Pagina com incorporacao do waze para quem utiliza gps no celular.</p>
+<iframe src="https://embed.waze.com/iframe?zoom=16&lat=-24.120415&lon=-46.668552&ct=livemap" width="580" height="315" allowfullscreen></iframe>
     </section>
 
     <footer>
