--- a/comente.html
+++ b/comente.html
@@ -6,57 +6,57 @@
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Início</title>
+        <title>COMENTÁRIOS</title>
         <link rel="stylesheet" href="estilogeral.css">
     </head>
-<body>
+    <body>
 
-    <header>
-        <nav>
-            <button class="hamburger" onclick="toggleMenu()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </button>
-            <ul class="menu">
-                <li><a href="index.html">INÍCIO</a></li>
-                <li><a href="mongagua.html">MONGAGUÁ</a></li>
-                <li>
-                    <a href="#">GALERIA</a>
-                    <ul class="submenu">
-                        <li><a href="fotos.html">FOTOS</a></li>
-                        <li><a href="videos.html">VÍDEOS</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">ALUGUE</a>
-                    <ul class="submenu">
-                        <li><a href="agenda.html">AGENDA</a></li>
-                        <li><a href="calculadora.html">PREÇOS</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">COMO CHEGAR</a>
-                    <ul class="submenu">
-                        <li><a href="googlemaps.html">MAPS</a></li>
-                        <li><a href="waze.html">WAZE</a></li>
-                    </ul>
-                </li>
-                <li><a href="contato.html">CONTATO</a></li>
-                <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <nav>
+                <button class="hamburger" onclick="toggleMenu()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </button>
+                <ul class="menu">
+                    <li><a href="index.html">INÍCIO</a></li>
+                    <li><a href="mongagua.html">MONGAGUÁ</a></li>
+                    <li>
+                        <a href="#">GALERIA</a>
+                        <ul class="submenu">
+                            <li><a href="fotos.html">FOTOS</a></li>
+                            <li><a href="videos.html">VÍDEOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">ALUGUE</a>
+                        <ul class="submenu">
+                            <li><a href="agenda.html">AGENDA</a></li>
+                            <li><a href="calculadora.html">PREÇOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">COMO CHEGAR</a>
+                        <ul class="submenu">
+                            <li><a href="googlemaps.html">MAPS</a></li>
+                            <li><a href="waze.html">WAZE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
+                    <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
+                </ul>
+            </nav>
+        </header>
 
-    <section class="text-section">
-        <h1>PAGINA DE INTERAÇÃO COM OS CLIENTES</h1>
-        <p>Aqui serão deixados os comentarios e depoimentos dos clientes em relacao a suas estadias, feddbacks construtivos para melhorias do imovel </p>
-    </section>
+        <section class="text-section">
+            <h1>ESTA PÁGINA ESTARÁ DISPONÍVEL EM BREVE!</h1>
+            <p>Aqui serão deixados os comentarios e depoimentos dos clientes em relacao a suas estadias, feddbacks construtivos para melhorias do imovel </p>
+        </section>
 
-    <footer>
-        <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
+        </footer>
 
-    <script src="scriptmenu.js"></script>
-</body>
+        <script src="scriptmenu.js"></script>
+    </body>
 </html>
