--- a/fotos.html
+++ b/fotos.html
@@ -12,6 +12,7 @@
     <body>
 
         <header>
+            <label>CASA FRENTE MAR DO IGOR</label>
             <nav>
                 <button class="hamburger" onclick="toggleMenu()">
                     <div></div>
@@ -42,8 +43,8 @@
                             <li><a href="waze.html">WAZE</a></li>
                         </ul>
                     </li>
-                <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
-                <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
+                    <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
+                    <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
                 </ul>
             </nav>
         </header>
